- junit dependency is added to pom.xml. Test files removed under the test folder. Test files (cards) are added into resources such as four.txt. Refactor warnings.